--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -12,20 +12,32 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :incident_number %><br />
+    <%= f.text_field :incident_number %>
+  </div>
+  <div class="field">
+    <%= f.label :incident_type %><br />
+    <%= f.text_field :incident_type %>
+  </div>
+  <div class="field">
+    <%= f.label :level %><br />
+    <%= f.text_field :level %>
   </div>
   <div class="field">
     <%= f.label :location %><br />
     <%= f.text_field :location %>
   </div>
   <div class="field">
-    <%= f.label :incidenttype %><br />
-    <%= f.text_field :incidenttype %>
+    <%= f.label :location_details %><br />
+    <%= f.text_field :location_details %>
   </div>
   <div class="field">
-    <%= f.label :occurence_date %><br />
-    <%= f.datetime_select :occurence_date %>
+    <%= f.label :summary %><br />
+    <%= f.text_area :summary %>
+  </div>
+  <div class="field">
+    <%= f.label :occured_on %><br />
+    <%= f.datetime_select :occured_on %>
   </div>
   <div class="actions">
     <%= f.submit %>
