--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,7 +104,7 @@
 						
 						
 					</ul></li>
-					<li  style=" width:440px;" class="date-filter">	Date<span class="current" id="date_counter"></span>
+					<li  class="date-filter">	Date<span class="current" id="date_counter"></span>
 					
 					
 								<ul style="width:400px;margin-left:30px;height:50px;background-color:#DDD;"><li><div  style="position:relative; width:285px;margin-left:20px;margin-top:-20px;height:40px;">
