added abbr curse prompt

--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -49,6 +49,7 @@ abbr {
     letter-spacing: 0.0625rem;
     text-transform: uppercase;
 	border-bottom: 1px #aaa dashed;
+	cursor: help;
 }
 ul {
 	margin: 1em 0;
