--- a/mockups/css/style.css
+++ b/mockups/css/style.css
@@ -79,7 +79,8 @@ abbr {
   letter-spacing: 1px;
   letter-spacing: 0.0625rem;
   text-transform: uppercase;
-  border-bottom: 1px #aaa dashed; }
+  border-bottom: 1px #aaa dashed;
+  cursor: help; }
 
 ul {
   margin: 1em 0;
