--- a/mockups/css/style.css
+++ b/mockups/css/style.css
@@ -325,7 +325,7 @@ input, .btn {
 /* @end Layout */
 @media all and (min-width: 40em) {
   /* @group Typography */
-  body {
+  .holding {
     max-width: 43rem; }
 
   .site-intro .logo {
