--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -89,6 +89,11 @@ a:focus {
 	color: #111;
 }
 
+.redacted {
+	background-color: $regular-text;
+	color: $grey;
+}
+
 input {
 	background-color: #fff;
 }
@@ -187,6 +192,13 @@ input {
 	font-size: .75rem;
 	line-height: 1.4em;
 }
+.redacted {
+	display: inline-block;
+	padding: 0 .5rem;
+	border-bottom: none;
+	letter-spacing: 0.1875rem;
+}
+
 /* @end Typography */
 
 /* @group Navigation */
