--- a/mockups/css/style.css
+++ b/mockups/css/style.css
@@ -35,7 +35,7 @@ textarea:-moz-placeholder {
 
 body {
   margin: 0 auto;
-  padding: 0 1em;
+  padding: 0;
   font-family: 'Open Sans', Verdana, sans-serif;
   line-height: 1.6em;
   font-size: 18px; }
@@ -134,7 +134,12 @@ input {
 /* @end Colours */
 /* @group Page structure */
 .holding {
-  text-align: center; }
+  text-align: center;
+  padding: 0 1em; }
+
+.main {
+  padding: 0 16px;
+  padding: 0 1rem; }
 
 .box {
   padding: 24px 24px 8px;
