--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -3,7 +3,7 @@
 
 body {
 	margin: 0 auto;
-	padding: 0 1em;
+	padding: 0;
 	font-family: 'Open Sans', Verdana, sans-serif;
 	line-height: 1.6em;
 	font-size: 18px;
@@ -130,6 +130,12 @@ input {
 /* @group Page structure */
 .holding {
 	text-align: center;
+	padding: 0 1em;
+}
+
+.main {
+	padding: 0 16px;
+	padding: 0 1rem;
 }
 
 .box {
