switched to em on the body declaration

--- a/mockups/css/style.css
+++ b/mockups/css/style.css
@@ -38,7 +38,8 @@ body {
   padding: 0;
   font-family: 'Open Sans', Verdana, sans-serif;
   line-height: 1.6em;
-  font-size: 18px; }
+  font-size: 1.125em;
+  /* 18px */ }
 
 /* @group Elements */
 h1, h2, h3, h4 {
