--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -6,7 +6,7 @@ body {
 	padding: 0;
 	font-family: 'Open Sans', Verdana, sans-serif;
 	line-height: 1.6em;
-	font-size: 18px;
+	font-size: 1.125em; /* 18px */
 }
 
 /* @group Elements */
