made background pure white

--- a/mockups/css/style.css
+++ b/mockups/css/style.css
@@ -91,7 +91,7 @@ ul {
 /* @group Colours */
 body {
   color: #444444;
-  background-color: #FCFEFB; }
+  background-color: white; }
 
 .logo {
   color: #467719; }
