--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -62,12 +62,13 @@ ul {
 $regular-text : #444;
 $green : #467719;
 $grey : #c0c0c0;
+$fine-graphite :  #eaeaea;
 
 $note : #F1CB7A;
 
 body {
 	color: $regular-text;
-	background-color: #FCFEFB;
+	background-color: #FFF
 
 }
 
