--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -211,9 +211,12 @@ input {
 }
 .redacted {
 	display: inline-block;
+	padding: 0 8px;
 	padding: 0 .5rem;
 	border-bottom: none;
 	letter-spacing: 0.1875rem;
+	font-size: 16px;
+	font-size: 1rem;
 }
 
 /* @end Typography */
@@ -245,6 +248,7 @@ input {
 }
 
 /* @end Navigation */
+
 
 /* @group Icons */
 
