--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -196,7 +196,7 @@ input {
 		text-indent: -999em;
 	}
 	dl {
-		margin-top: 0;
+		margin-top: 1em;
 		margin-bottom: 0;
 	}
 	dt {
@@ -223,7 +223,6 @@ input {
 		border-bottom: 1px #eaeaea solid;
 	}
 	.incident-summary {
-		padding-top: 1em;
 	}
 	.incident-number,
 	.incident-level {
