--- a/mockups/css/style.css
+++ b/mockups/css/style.css
@@ -38,8 +38,8 @@ body {
   padding: 0;
   font-family: 'Open Sans', Verdana, sans-serif;
   line-height: 1.6em;
-  font-size: 1.125em;
-  /* 18px */ }
+  font-size: 1em;
+  /* 16px */ }
 
 /* @group Elements */
 h1, h2, h3, h4 {
@@ -395,6 +395,12 @@ input, .btn {
   /* @group Typography */
   .holding {
     max-width: 43rem; }
+
+  /* @group Typography */
+  body {
+    font-size: 18px;
+    font-size: 1.125rem;
+    /* 18px */ }
 
   .site-intro .logo {
     font-size: 48px;
