added small logo size

--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -255,6 +255,11 @@ input {
 /* @group Typography */
 
 .logo {
+	font-size: 16px;
+	font-size: 1.5rem;
+	a {
+		text-decoration: none;
+	}
 }
 .loud,
 .distinct {
