--- a/mockups/css/style.css
+++ b/mockups/css/style.css
@@ -229,7 +229,12 @@ dt.incident-location-details {
 /* @end Incidents */
 /* @end Page Structure */
 /* @group Typography */
-.loud {
+.logo {
+  font-size: 16px;
+  font-size: 1.5rem; }
+  .logo a {
+    text-decoration: none; }
+
 .loud,
 .distinct {
   font-size: 18px;
