added google web fonts js and css

--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -1,6 +1,5 @@
 @import "reset";
 
-
 body {
 	margin: 0 auto;
 	padding: 0;
@@ -8,6 +7,44 @@ body {
 	line-height: 1.6em;
 	font-size: 1em; /* 16px */
 }
+
+/* @group Font Families */
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/cJZKeOuBrn4kERxqtaUH3bO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/k3k702ZOKiLJc3WVjuplzKRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/xjAJXh38I15wypJXxuGMBrrIa-7acMAeDBVuclsi6Gc.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/PRmiXeptR36kaC0GEAetxhbnBKKEOwRKgsHDreGcocg.woff) format('woff');
+}
+
+.wf-loading .site-header,
+.wf-loading .main,
+.wf-loading .site-footer {
+	visibility: hidden;
+}
+.wf-active body {
+	font-family: 'Open Sans', Verdana, sans-serif;
+	text-rendering: optimizeLegibility;
+}
+
 
 /* @group Elements */
 h1,h2,h3,h4 {
