--- a/mockups/css/style.css
+++ b/mockups/css/style.css
@@ -180,13 +180,13 @@ input {
 .holding {
   text-align: center;
   padding: 0 1em;
-  max-width: 24em; }
+  max-width: 27em; }
 
 .site-header,
 .main,
 .site-footer {
-  padding: 0 16px;
-  padding: 0 1rem; }
+  padding-left: 5%;
+  padding-right: 5%; }
 
 .box {
   padding: 24px 24px 8px;
@@ -500,7 +500,11 @@ input, .btn {
   .site-header,
   .main,
   .site-footer {
-    max-width: 34rem;
-    margin: 0 auto;
+    max-width: 60rem;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 0;
-    padding-right: 0; } }
+    padding-right: 0; }
+
+  .reading > * {
+    max-width: 38rem; } }
