--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -182,14 +182,14 @@ input {
 .holding {
 	text-align: center;
 	padding: 0 1em;
-	max-width: 24em;
+	max-width: 27em;
 }
 
 .site-header,
 .main,
 .site-footer {
-	padding: 0 16px;
-	padding: 0 1rem;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .box {
@@ -578,9 +578,13 @@ body {
 	.site-header,
 	.main,
 	.site-footer {
-		max-width: 34rem;
-		margin: 0 auto;
+		max-width: 60rem;
+		margin-left: auto;
+		margin-right: auto;
 		padding-left: 0;
 		padding-right: 0;
+	}
+	.reading > * {
+	max-width: 38rem;
 	}
 }
