--- a/mockups/css/style.css
+++ b/mockups/css/style.css
@@ -270,7 +270,8 @@ dt.incident-location-details {
 /* @group Typography */
 .logo {
   font-size: 16px;
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  font-family: 'Open Sans', verdana, sans-serif; }
   .logo a {
     text-decoration: none; }
 
