--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -299,6 +299,7 @@ input {
 .logo {
 	font-size: 16px;
 	font-size: 1.5rem;
+	font-family: 'Open Sans', verdana, sans-serif;
 	a {
 		text-decoration: none;
 	}
