--- a/mockups/css/style.scss
+++ b/mockups/css/style.scss
@@ -309,13 +309,10 @@ input {
 	font-size: 18px;
 	font-size: 1.125rem; /* 18px */
 }
+.supporting,
 .discrete {
 	font-size: 14px;
-	font-size: .875rem; /* 12px */	
-}
-.supporting {
-	font-size: 12px;
-	font-size: .75rem;
+	font-size: .875rem; /* 14px */	
 	line-height: 1.4em;
 }
 .redacted {
@@ -534,7 +531,11 @@ body {
 	font-size: 1.875rem;
 	line-height: 1.3;
 }
-
+.supporting {
+	font-size: 13px;
+	font-size: 0.8125rem;
+	line-height: 1.4em;
+}
 /* @end Typography */
 
 /* @group Navigation */
