--- a/app/views/gateway/index.html.erb
+++ b/app/views/gateway/index.html.erb
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
+   <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Detention Logs | Opening Australia's Immigration Detention</title>
@@ -29,7 +29,7 @@
 			 <% end %>
             <legend class="distinct"><label for="email">Get Detention&nbsp;Logs updates</label></legend>
 	        <input type="email" name="subscription[email]" placeholder="Email Address" id="email" required/>
-	        <label for="submit" class="btn">
+	        <label class="btn">
 	        	Subscribe
 	        	<input type="submit" />
 	        </label>
