--- a/app/views/gateway/index.html.erb
+++ b/app/views/gateway/index.html.erb
@@ -9,6 +9,24 @@
         <title>Detention Logs | Opening Australia's Immigration Detention</title>
         
         <meta name="author" content="Detention Logs">
+        <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
+        <meta name="viewport" content="width=device-width">
+		<meta name="google-site-verification" content="UyFaPbUx_nMcjSfI1G-dkYcTZljC0-do61HPxvESXic" />
+
+    	<!-- Twitter -->
+	    <meta name="twitter:card" content="summary">
+		<meta name="twitter:url" content="http://detentionlogs.com.au">
+		<meta name="twitter:title" content="Detention Logs">
+		<meta name="twitter:description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
+		<meta name="twitter:creator" content="@detentionlogs">
+
+		<!-- Facebook -->
+	    <meta property="og:title" content="Detention Logs" />
+		<meta property="og:description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network." />
+		<meta property="og:url" content="http://detentionlogs.com.au" />
+		
+		
+        <meta name="author" content="Detention Logs">
         <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.">
         <meta name="viewport" content="width=device-width">
 
@@ -52,11 +70,12 @@
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
+
 		  ga('create', 'UA-40270731-1', 'detentionlogs.com.au');
 		  ga('send', 'pageview');
-		
+
 		</script>
+
     </body>
 </html>
 
