--- a/app/views/gateway/index.html.erb
+++ b/app/views/gateway/index.html.erb
@@ -24,18 +24,13 @@
 	    <meta property="og:title" content="Detention Logs" />
 		<meta property="og:description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network." />
 		<meta property="og:url" content="http://detentionlogs.com.au" />
-		
-		
-        <meta name="author" content="Detention Logs">
-        <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.">
-        <meta name="viewport" content="width=device-width">
 
         <%= stylesheet_link_tag    "style", :media => "all" %>
        	   <%= javascript_include_tag "fixers" %>
     </head>
     <body class="h-card holding">
         <article class="site-intro">
-           <h1 class="logo p-org fn">Detention Logs</h1>
+           <h1 class="logo p-org p-name">Detention Logs</h1>
 	       <p class="loud p-note">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
         </article>
 
