--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,14 +1,40 @@
+<section class="main incident-explorer" role="">
 <div class="pagination-details"><%=  page_entries_info @incidents %></div>
 <%= paginate @incidents %>
-
-
+<ul class="header-row supporting">
+	<li class="incident-occured-on">Occured On</li>
+	<li class="incident-type">Type</li>
+	<li class="incident-location">Location</li>
+	<li class="incident-summary">Summary</li>
+	<li class="incident-secondary">
+		<div class="incident-location-details">Location Details</div>
+		<div class="incident-number">Incident Number</div>
+	</li>			
+</ul>
 <ul class="incident-list">
-<% @incidents.each do |incident| %>
+	<% @incidents.each do |incident| %>
 
-<li style="" class="summary-text"><div><%= incident.location %></div><strong><a href="/incidents/<%= incident.id %>"><%= incident.incident_number %></a></strong><%= incident.summary %></li> 
+	<li class="supporting">
+		<article class="incident-item">
 
-   
-<% end %>
+			<section class="incident-primary">
+				<span class="field-label">Occured On</span><time class="incident-occured-on"><%= incident.occured_on.strftime("%d %b %Y %H:%M") %></time>
+				<span class="field-label">Type</span><section class="incident-type"><%= incident.incident_type %></section>
+				<span class="field-label">Location</span><section class="incident-location"><%= incident.location %></section>
+			</section>
+			<section class="incident-body">
+				<span class="field-label incident-summary-label">Incident Summary</span><section class="incident-summary discrete"><p><%= incident.summary %></p></section>
+			</section>
+			<section class="incident-secondary">
+				<span class="field-label">Location Details</span><section class="incident-location-details"><p><%= incident.location_details %></p></section>
+				<span class="field-label"><abbr title="Incident">IN.</abbr> Number</span><a href="/incidents/<%= incident.id %>" class="incident-number"><%= incident.incident_number %> <span class="incident-link">see&nbsp;details<i> &rarr;</i></span></a>
+			</section>
+		</article>
+	</li>
+
+	<% end %>
+	
 </ul>
 
 <%= paginate @incidents %>
+</section>
