--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -264,6 +264,8 @@ input:-ms-input-placeholder { color: #555;}
 	font-size: .875em;
 }
 
+.additional-info {
+}
 /* @end Typography */
 /* @group Page structure */
 .holding {
@@ -726,6 +728,47 @@ input, .btn {
 
 /* @end Layout */
 
+/* @group Tools */
+
+.add-details {
+	font-size: $scale-n2;
+}
+.collapsible-heading {
+	padding-left:1rem;
+	cursor: pointer;
+/*
+	&::before {
+	content: "– ";
+	vertical-align: top !important;
+	}
+*/
+
+}
+.collapsible-heading-collapsed {
+/*
+		&::before {
+			content: "+ ";
+	}
+	*/
+}
+.collapsible-heading-toggle {
+	text-decoration:none;
+	color:#333;
+}
+.collapsible-heading-status {
+/*
+	position:absolute;
+	left:-99999em;
+*/
+}
+.collapsible-content-collapsed {
+	display:none;
+}
+
+
+
+
+/* @end Tools */
 
 @media all and (min-width: 40em) {
 
