--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -15,8 +15,22 @@
 				<dt class="incident-occured-on">Occured On</dt>
 					<dd class="incident-occured-on"><a href=""><time><%= @incident.occured_on.strftime("%d %b %Y %H:%M") %></time></a></dd>
 				<dt class="incident-location">Location</dt>
-					<dd class="incident-location"><a href=""><%= @incident.location %></a></dd>
+					<dd class="incident-location"><a href=""><%= @incident.location %></a>
+					<strong class="add-details">info</strong>
+					<div class="additional-info discrete box note">
+						<h2>About <%= @incident.location %></h2>
+						<p>Villawood Immigrations Detention Centre (IDC), managed by <a href="http://www.serco-ap.com.au/">Serco Australia Pty Ltd</a> (Australian branch of the UK based multinational <a href="http://www.serco.com/">Serco Group</a>), is located in western Sydney at <a href="https://maps.google.com.au/maps/ms?msid=201451526145055160953.00049f30e3d60e94e64f7&amp;msa=0&amp;ll=-33.874406,151.165695&amp;spn=0.488001,0.889206&amp;iwloc=00049f311be096c3099bf">15 Birmingham Avenue, Villawood NSW 2163</a>, and has an operating capacity of 379 detainees and a contingency capacity of 480 (as of <a href="http://www.immi.gov.au/managing-australias-borders/detention/facilities/capacity/">29th April 2013</a>).</p>
 
+<p>Villawood IDC has 3 main sections:</p>
+
+<ul>
+<li><p>Blaxland (aka Stage 1)</p></li>
+<li><p>Hughes (aka Stage 2), contains female-only area Banksia</p></li>
+<li><p>Fowler (aka Stage 3), for “high risk detainees – people at high risk to others or themselves,” according to <a href="http://www.abc.net.au/4corners/stories/2011/10/20/3344543.htm">ABC’s Four Corners program Asylum (October, 2011)</a></p></li>
+</ul>
+						<p><a href="link to location search" title="index of available incidents from this locations">see all available incidents recorded at <%= @incident.location %></a></p>
+					</div>
+					</dd>
 			</dl>
 	    	<dl class="incident-summary">
 	    		<dt>Incident Summary</dt>
