added id to footer nag to make menu btw work

--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -29,7 +29,7 @@
     <%= yield %>
 
 	<footer role="contentinfo" class="main site-footer">
-		<nav class="footer-nav" role="navigation">
+		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
 				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
