added apod, ita & irh to the glossary

--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -75,6 +75,18 @@
 					var idc = $(this).html();
 					idc = idc.replace(/\bidc\b/i, '<abbr title="Immigration Detention Centre">IDC</abbr>'); //this should be fixed replace that actual text, so as to keep the capitalisation used by the original author. 
 					$(this).html(idc);
+					
+					var apod = $(this).html();
+					apod = apod.replace(/\bapod\b/i, '<abbr title="Alternative Place of Detention">APOD</abbr>'); //this should be fixed replace that actual text, so as to keep the capitalisation used by the original author. 
+					$(this).html(apod);
+					
+					var ita = $(this).html();
+					ita = ita.replace(/\bita\b/i, '<abbr title="Immigration Transit Accommodation">ITA</abbr>'); //this should be fixed replace that actual text, so as to keep the capitalisation used by the original author. 
+					$(this).html(ita);
+					
+					var ihr = $(this).html();
+					ihr = ihr.replace(/\bihr\b/i, '<abbr title="Immigration Residential Housing">IHR</abbr>'); //this should be fixed replace that actual text, so as to keep the capitalisation used by the original author. 
+					$(this).html(ihr);
 				})
 			
 			
