fixed bug it box margin

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -885,6 +885,9 @@ body {
 .incident {
 	max-width: 42rem;
 	margin: 0 auto;
+	.main {
+		max-width: 42rem;		
+	}
 	.related,
 	.box {
 		clear: both;
