--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -8,8 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <%= stylesheet_link_tag    "style", :media => "all" %>
-    <%= javascript_include_tag "incidents.js", ":defaults", "moment.min.js" %>
-
+    <%= javascript_include_tag "incidents.js", "fixers" %>
 
 </head>
 <body>
@@ -24,7 +23,6 @@
 			</ul>
 		</nav>
     </header>
-
 
     <%= yield %>
 
@@ -55,7 +53,10 @@
 			<p>Semiotics actually bespoke, high life street art +1 carles fanny pack neutra williamsburg craft beer whatever 90's.  Forage truffaut wes anderson, narwhal photo booth food truck actually swag next level.</p>
 		</article>
 	</footer>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script>window.jQuery || document.write("<script src='../assets/jquery-1.9.1.min.js'>\x3C/script>")</script>
 
 	<!-- Glossary replacer -->
 	<script>
