--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -386,6 +386,17 @@ input:-ms-input-placeholder { color: #555;}
 			display: block;
 		}
 	}
+	.incident-location {
+		.add-details {
+			visibility: hidden;
+		}
+		.collapsible-heading-toggle {
+			visibility: visible;
+			display: block;
+			padding-left: 0;
+		}
+	}
+
 	.box {
 		margin-top: 0;
 		margin-bottom: 0;
@@ -542,6 +553,10 @@ header .primary-nav {
 	}
 	ul + ul {
 			margin-bottom: .25rem;
+	}
+	.supporting li {
+		margin-top: .25rem;
+		padding: .25rem 0;
 	}
 }
 .footer-contact {
@@ -730,6 +745,11 @@ input, .btn {
 
 /* @group Tools */
 
+.no-js {
+	.add-details {
+		display: none;
+	}
+}
 .add-details {
 	font-size: $scale-n2;
 }
@@ -769,6 +789,26 @@ input, .btn {
 
 
 /* @end Tools */
+
+@media all and (min-width: 30em) {
+
+/* @group Page structure */
+
+/* @group Incidents */
+.incident {
+	.incident-location {
+		.collapsible-heading-toggle {
+			display: inline-block;
+		}
+	}
+}
+
+
+/* @end Incidents */
+
+/* @group Page structure */
+
+}
 
 @media all and (min-width: 40em) {
 
